--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aiohttp = "^3.6.2"
 black = "^20.8b1"
 flake8 = "*"
 mypy = "^0.782"
+rope = "^0.17.0"
 
 [tool.poetry.scripts]
 search_repo = 'search_repo:main'
