--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
 name = "search_repo"
-version = "0.1.0"
+version = "0.2.0"
 description = "Search for a github repo"
 authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Tadaboody/search_repo"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
 aiohttp = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
